[package]
name = "tetris-raylib-rs"
version = "0.1.0"
authors = ["SpicyRicecaker <awesomenessisgolden@gmail.com>"]
edition = "2018"
repository = "https://github.com/SpicyRicecaker/raylib-experiment"
homepage = "https://github.com/SpicyRicecaker/raylib-experiment"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raylib = "3.5"
rand = "0.8.3"